syntax = "proto3";

package liveliness;

import "common/errors.proto";
import "common/numbers.proto";
import "kyc/kyc.proto";
import "google/protobuf/timestamp.proto";

// Backed by table 'kyc_liveliness'
message Liveliness {
  string id = 1; // System Key: id is generated by the server or the database
  optional string liveliness_video_file = 2;
  optional string liveliness_video_file_type = 3;
  optional string timestamp_video_file = 4;
  optional string timestamp_video_file_type = 5;
  optional string id_ownership_photo_file = 6;
  optional string id_ownership_photo_file_type = 7;
  kyc.Status status = 8;
}

message List {
  repeated Liveliness list = 1;
}

message SelectList {
  repeated string list = 1;
}

message CreateRequest {
  // id is generated by the server or the database
  optional string liveliness_video_file = 1;
  optional string liveliness_video_file_type = 2;
  optional string timestamp_video_file = 3;
  optional string timestamp_video_file_type = 4;
  optional string id_ownership_photo_file = 5;
  optional string id_ownership_photo_file_type = 6;
  optional kyc.Status status = 7;
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    Liveliness liveliness = 2;
  }
}

message UpdateRequest {
  string id = 1;
  optional string liveliness_video_file = 2;
  optional string liveliness_video_file_type = 3;
  optional string timestamp_video_file = 4;
  optional string timestamp_video_file_type = 5;
  optional string id_ownership_photo_file = 6;
  optional string id_ownership_photo_file_type = 7;
  optional kyc.Status status = 8;
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    Liveliness liveliness = 2;
  }
}

// GetRequest is expected to return a single value.
message GetRequest {
  string id = 1;
}

// An error is returned if there is more than one record found.
message GetResponse {
  oneof response {
    common.Error error = 1;
    Liveliness liveliness = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional string liveliness_video_file = 2;
  optional string liveliness_video_file_type = 3;
  optional string timestamp_video_file = 4;
  optional string timestamp_video_file_type = 5;
  optional string id_ownership_photo_file = 6;
  optional string id_ownership_photo_file_type = 7;
  optional kyc.StatusList status = 8;
}

message GetListResponse {
  oneof response {
    common.Error error = 1;
    Liveliness liveliness = 2;
  }
}

// A delete request is just an update request with status set to TERMINATED.
message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    Liveliness liveliness = 2;
  }
}

// This is to be used in Entities that requires Liveliness Assignment

message UpdateLiveliness {
  optional string liveliness_video_file = 1;
  optional string liveliness_video_file_type = 2;
  optional string timestamp_video_file = 3;
  optional string timestamp_video_file_type = 4;
  optional string id_ownership_photo_file = 5;
  optional string id_ownership_photo_file_type = 6;
  optional kyc.StatusList status = 7;
}
